--- a/src/components/newNote/newNote.css
+++ b/src/components/newNote/newNote.css
@@ -1,13 +1,26 @@
 .line {
-    border-top: 1px solid var(--Label-Light-Secondary);
-    opacity: 0.2;
-  }
-  .note {
-    border-radius: 10px;
-    padding: 15px;
-    background: #fff;
-    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.15);
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-  }
+  border-top: 1px solid var(--Label-Light-Secondary);
+  opacity: 0.2;
+}
+.note {
+  border-radius: 10px;
+  padding: 15px;
+  background: #fff;
+  box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.15);
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.note-title {
+  color: var(--black-col);
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 23.788px; /* 158.586% */
+  letter-spacing: 0.217px;
+}
+.new-note-text {
+  color: var(--black-col);
+  font-size: 12px;
+  font-weight: 300;
+  line-height: normal;
+}
